<resources>
    <!-- CREDENCIALES -->
    <string name="app_name">ej1_b</string>
    <string name="developer">COMPA</string>
    <string name="desarrollo">Desarrollado por: </string>
    <string name="version">1.0.0</string>

    <!-- LOGIN -->
    <string name="titulo_login">Ingrese Sesion</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="txt_usuario">Ingrese Usuario</string>
    <string name="lbl_password">Contraseña</string>
    <string name="txt_password">Ingrese Contraseña</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="lbl_crear_cuenta">No tienes cuenta? Registrate!</string>

    <!-- REGISTRO -->

    <!-- ELECCION -->

    <!-- MAS DATOS -->

</resources>